apply plugin: "java"
apply plugin: "groovy"

sourceCompatibility=JavaVersion.VERSION_1_7
targetCompatibility=JavaVersion.VERSION_1_7

repositories {
//    mavenLocal()

    mavenCentral()
    //maven { url "http://m2.neo4j.org/content/repositories/releases/" }
    maven {url "https://raw.github.com/neo4j-contrib/m2/master/releases" }
}

configurations {
    fat {
        description = "fatjar"
        transitive = true
    }
}

ext {
    neo4jVersion = "2.2.1"
    jerseyVersion = "1.18.1"
    luceneVersion = "3.6.2" // NB: make sure to use the same version shipping with Neo4j
}

dependencies {
    testCompile "org.codehaus.groovy:groovy-all:2.4.1"
    compile "org.neo4j:neo4j-kernel:$neo4jVersion"
    //compile "org.neo4j:neo4j-csv:$neo4jVersion"
    compile "org.neo4j:server-api:$neo4jVersion"
    compile "org.neo4j:neo4j-cypher:$neo4jVersion"
    compile "org.neo4j.app:neo4j-server:$neo4jVersion"
//    compile "org.apache.lucene:lucene-queries:$luceneVersion"

    testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
    testCompile "org.neo4j.contrib:neo4j-spock-extension:0.5.2"

    runtime 'org.glassfish.jersey.media:jersey-media-json-jackson:2.13'

    fat 'org.glassfish.jersey.media:jersey-media-json-jackson:2.13'
//    fat "org.apache.lucene:lucene-queries:$luceneVersion"
}


task fatJar(type: Jar) {
    baseName = project.name + '-all'
    from {
           configurations.fat.collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar
}

//test {
//    maxHeapSize = "12g"
//    minHeapSize = "12g"
//    jvmArgs "-XX:MaxPermSize=256m"
//}

